[package]
name = "rustorial"
version = "0.1.0"
authors = ["Foucauld <fdebellabre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.3", features = ["small_rng"] }
image = "0.23.14"
rayon = "*"
crossbeam = "*"
minifb = "*"